--- a/src/Pages/Contrate/Form/styles.css
+++ b/src/Pages/Contrate/Form/styles.css
@@ -11,7 +11,7 @@
   margin: 0 1rem 4vh;
 }
 
-.form__field-container--full-width {
+.form__field-container:nth-child(n+3) {
   grid-column: span 2;
 }
 
@@ -20,6 +20,7 @@
   display: flex;
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
+  text-transform: capitalize;
 }
 
 .form__field-input {
