--- a/src/Pages/Contrate/Form/styles.css
+++ b/src/Pages/Contrate/Form/styles.css
@@ -15,11 +15,14 @@
   grid-column: span 2;
 }
 
-.form__field-label {
+.form__field-label{
   color: var(--cinza-600);
   display: flex;
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
+}
+
+.form__field-label span::first-letter{
   text-transform: capitalize;
 }
 
@@ -34,10 +37,65 @@
   width: 100%;
 }
 
-.form__field-input::placeholder {
-  visibility: hidden;
+.form__field-input:focus, .form__field-select:focus {
+  outline-color: var(--verde-300);
 }
 
-.form__field-input:focus {
-  outline-color: var(--verde-300);
+.form__field-select {
+  background-color: var(--branco);
+  border: 1px solid var(--cinza-200);
+  color: var(--cinza-500);
+  display: inline-block;
+  font-size: 1.1rem;
+  height: 3.75rem;
+  padding: 0.5rem 3.5rem 0.5rem 1rem;
+  text-transform: capitalize;
+  width: 100%;
+}
+
+.form__field-select option {
+  color: var(--cinza-800);
+}
+
+.form__field-select--arrow {
+  background-image:
+    linear-gradient(45deg, transparent 50%, var(--cinza-500) 50%),
+    linear-gradient(135deg, var(--cinza-500) 50%, transparent 50%),
+    linear-gradient(to right, transparent, transparent);
+  background-position:
+    calc(100% - 20px) calc(1.5rem + 2px),
+    calc(100% - 15px) calc(1.5rem + 2px),
+    100% 0;
+  background-repeat: no-repeat;
+  background-size:
+    5px 5px,
+    5px 5px,
+    3.75rem 3.75rem;
+}
+
+.form__field-select--arrow:focus {
+  background-image:
+    linear-gradient(45deg, var(--cinza-500) 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, var(--cinza-500) 50%),
+    linear-gradient(to right, transparent, transparent);
+  background-position:
+    calc(100% - 15px) 1.5rem,
+    calc(100% - 20px) 1.5rem,
+    100% 0;
+  background-repeat: no-repeat;
+  background-size:
+    5px 5px,
+    5px 5px,
+    2.5rem 2.5rem;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  outline: none;
+}
+
+.form__error {
+  color: var(--alert);
+  font-size: 0.875rem;
+}
+
+button {
+  margin-top: 20rem;
 }
