add work areas to quem somos

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,8 @@ select {
   --verde-300: #00b37e;
   --verde-500: #00875f;
   --slate-500: #54647A;
+  --laranja-300: #ec9575;
+  --laranja-500: #ec774d;
   --alert: #b91c1c;
 
   --fonte: 'Open Sans', sans-serif;
