--- a/src/Pages/Contrate/components/Form/styles.css
+++ b/src/Pages/Contrate/components/Form/styles.css
@@ -49,6 +49,7 @@
   font-size: 1.1rem;
   height: 3.75rem;
   padding: 0.5rem 3.5rem 0.5rem 1rem;
+  transition: all 375ms ease-in-out;
   text-transform: capitalize;
   width: 100%;
 }
@@ -91,11 +92,6 @@
   outline: none;
 }
 
-.form__error {
-  color: var(--alert);
-  font-size: 0.875rem;
-}
-
 .form__botao {
   appearance: none;
   background-color: var(--verde-500);
@@ -112,4 +108,9 @@
 
 .form__botao:hover {
   background-color: var(--verde-300);
+}
+
+.form__error {
+  color: var(--alert);
+  font-size: 0.875rem;
 }
