--- a/src/Pages/QuemSomos/Cards/styles.css
+++ b/src/Pages/QuemSomos/Cards/styles.css
@@ -95,3 +95,21 @@
   background-size: cover;
   z-index: -1;
 }
+
+@media screen and (max-width: 1600px) {
+  .card-grid-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .card-grid-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .card {
+    width: auto;
+  }
+}
