--- a/src/Pages/QuemSomos/Cards/components/CardButton/styles.css
+++ b/src/Pages/QuemSomos/Cards/components/CardButton/styles.css
@@ -36,3 +36,9 @@
   cursor: not-allowed;
   opacity: 0.75;
 }
+
+@media screen and (max-width: 650px) {
+  .card__button--secondary {
+    padding: 0.625rem 1rem;
+  }
+}
