--- a/src/Pages/Home/components/ToolsGrid/styles.css
+++ b/src/Pages/Home/components/ToolsGrid/styles.css
@@ -1,6 +1,11 @@
 .tools {
-  height: 87vh;
   padding: 10rem 20%;
+}
+
+.tools__grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(6, 1fr);
 }
 
 .tools__grid--call-to-action {
@@ -25,11 +30,10 @@
   justify-content: center;
 }
 
-.tools__grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(7, 1fr);
+.tools__grid--icon img {
+  width: 6.25rem;
 }
+
 .div1 { grid-area: 2 / 1 / 3 / 3; }
 
 .div2 { 
@@ -95,8 +99,51 @@
   }  
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 650px) {
+  
   .tools {
-    display: none;
+    padding: 0 1rem;
   }
+
+  .tools__grid {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    min-height: 75vh;
+  }
+
+  .tools__grid--call-to-action {
+    height: 5rem;
+    margin: 0;
+    width: 10rem;
+  }
+  
+  .tools__grid--call-to-action h2 {
+    font-size: 1.125rem;
+    font-weight: 600;
+    letter-spacing: -1px;
+  }
+  
+  .tools__grid--call-to-action h3 {
+    color: var(--slate-500);
+    font-size: 0.75rem;
+    margin: 0;
+  }
+
+  .tools__grid--icon img {
+    width: 2.5rem;
+  }
+
+  .div1 { grid-area: 1 / 1 / 3 / 3; }
+  .div2 { grid-area: 1 / 4 / 2 / 5; }
+  .div3 { grid-area: 2 / 3 / 3 / 4; }
+  .div4 { grid-area: 2 / 4 / 3 / 5; }
+  .div5 { grid-area: 4 / 1 / 5 / 2; }
+  .div6 { grid-area: 4 / 2 / 5 / 3; }
+  .div7 { grid-area: 3 / 3 / 5 / 5; }
+  .div8 { grid-area: 5 / 1 / 7 / 3; }
+  .div9 { grid-area: 6 / 3 / 7 / 4; }
+  .div10 { grid-area: 6 / 4 / 7 / 5; }
+  .div11 { grid-area: 7 / 2 / 8 / 3; }
+  .div12 { grid-area: 7 / 3 / 8 / 4; }
+  .div13 { grid-area: 7 / 4 / 8 / 5; }
 }
