--- a/src/Pages/QuemSomos/Cards/styles.css
+++ b/src/Pages/QuemSomos/Cards/styles.css
@@ -5,11 +5,15 @@
   gap: 2rem;
   justify-items: center;
 }
+
 .card {
 	border-radius: 6px;
 	box-shadow: 0px 10px 20px -10px rgba(0,0,0,0.75);
 	color: var(--preto);
-	max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
 	padding-top: 2rem;
 	position: relative;
 	text-align: center;
@@ -17,11 +21,11 @@
 }
 
 .card::before {
+  content: '';
   border-radius: 6px;
   content: '';
   height: 100%;
   left: 0;
-  max-height: 40rem;
   opacity: 0.5;
   overflow: hidden;
   position: absolute;
@@ -44,7 +48,9 @@
 .card__avatar {
   border: 4px solid var(--verde-500);
 	border-radius: 50%;
-  max-height: 9rem;
+  place-self: center;
+  height: auto;
+  max-width: 9rem;
 }
 
 .card__name {
@@ -58,13 +64,13 @@
 
 .card__description {
   display: flex;
+  justify-content: center;
   font-size: 0.875rem;
   line-height: 1.5;
-  max-height: 6.8rem;
+  margin: 0 1rem 0.5rem;
   min-height: 5.25rem;
   max-width: 20rem;
   overflow: hidden;
-  margin: 0 1rem;
   text-align: left;
 }
 
@@ -76,21 +82,21 @@
 }
 
 .card__background:nth-child(n):before {
-  background-image: url(../../../assets/images/card-backgrounds/card-bg-19.jpg);
+  background-image: url(../../../assets/images/card-backgrounds/card-bg-19.jpg) !important;
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
 }
 
 .card__background:nth-child(3n-1):before {
-  background-image: url(../../../assets/images/card-backgrounds/card-bg-18.jpg);
+  background-image: url(../../../assets/images/card-backgrounds/card-bg-18.jpg) !important;
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
 }
 
 .card__background:nth-child(3n)::before {
-  background-image: url(../../../assets/images/card-backgrounds/card-bg-13.svg);
+  background-image: url(../../../assets/images/card-backgrounds/card-bg-13.svg) !important;
   background-repeat: no-repeat;
   background-size: cover;
   z-index: -1;
