--- a/src/layout/Navbar/components/DialogMenu/styles.css
+++ b/src/layout/Navbar/components/DialogMenu/styles.css
@@ -43,3 +43,15 @@
     top: 1rem;
   }
 }
+
+.dark {
+  .dialog-menu-content {
+    background-color: #18181b;
+  }
+}
+
+.bear {
+  .dialog-menu-content {
+    background-color: #000;
+  }
+}
