fix: save user current theme to local storage

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,7 +3,7 @@
     background-color: #27272a;
   }
 
-  p, li, span, a, button, span, h1, h2, h3, h4, h5, h6 {
+  p, li, span, a, button, h1, h2, h3, h4, h5, h6 {
     color: white !important;
   }
 }
