--- a/src/Pages/Carreiras/components/Form/styles.css
+++ b/src/Pages/Carreiras/components/Form/styles.css
@@ -1,32 +1,32 @@
-.contrate__formulario {
+.recruitment-contrate__formulario {
   padding: 5rem;
 }
 
-.form__fields-line {
+.recruitment-form__fields-line {
   display: grid;
   grid-template-columns: 48% 48%;
 }
 
-.form__field-container {
+.recruitment-form__field-container {
   padding: 0 1rem 4vh;
 }
 
-.form__field-container:nth-child(n+3) {
+.recruitment-form__field-container:nth-child(n+5) {
   grid-column: span 2;
 }
 
-.form__field-label {
+.recruitment-form__field-label {
   color: var(--cinza-600);
   display: flex;
   font-size: 1.25rem;
   margin-bottom: 0.5rem;
 }
 
-.form__field-label span::first-letter{
+.recruitment-form__field-label span::first-letter{
   text-transform: capitalize;
 }
 
-.form__field-input {
+.recruitment-form__field-input {
   background-color: #fff;
   border: 1px solid var(--cinza-200);
   color: var(--cinza-500);
@@ -38,14 +38,14 @@
   width: 100%;
 }
 
-.form__field-input:focus, .form__field-select:focus {
+.recruitment-form__field-input:focus, .form__field-select:focus {
   border: none;
   border-radius: 4px;
   color: var(--preto);
   outline: 2px solid var(--verde-300);
 }
 
-.form__field-select {
+.recruitment-form__field-select {
   background-color: var(--branco);
   border: 1px solid var(--cinza-200);
   color: var(--cinza-500);
@@ -58,11 +58,11 @@
   width: 100%;
 }
 
-.form__field-select option {
+.recruitment-form__field-select option {
   color: var(--cinza-800);
 }
 
-.form__field-select--arrow {
+.recruitment-form__field-select--arrow {
   background-image:
     linear-gradient(45deg, transparent 50%, var(--cinza-500) 50%),
     linear-gradient(135deg, var(--cinza-500) 50%, transparent 50%),
@@ -78,7 +78,7 @@
     3.75rem 3.75rem;
 }
 
-.form__field-select--arrow:focus {
+.recruitment-form__field-select--arrow:focus {
   background-image:
     linear-gradient(45deg, var(--cinza-500) 50%, transparent 50%),
     linear-gradient(135deg, transparent 50%, var(--cinza-500) 50%),
@@ -96,7 +96,7 @@
   outline: none;
 }
 
-.form__botao {
+.recruitment-form__botao {
   appearance: none;
   background-color: var(--verde-500);
   border: none;
@@ -104,55 +104,73 @@
   cursor: pointer;
   font-size: 0.875rem;
   font-weight: 700;
+  height: 3.75rem;
   margin: 2rem 1rem 0;
-  padding: 1.25rem 3.5rem;
+  position: relative;
   text-transform: uppercase;
   transition: all 0.3s ease-in-out;
+  width: 10rem;
 }
 
-.form__botao:hover {
+.recruitment-form__botao:hover {
   background-color: var(--verde-300);
 }
 
-.form__error {
+.spinner-container {
+  animation: spin 1s linear infinite;
+}
+
+.recruitment-form__botao svg {
+  align-items: center;
+  display: flex;
+  height: auto;
+  left: 50%;
+  justify-content: center;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  width: 1.5rem;
+}
+
+.recruitment-form__error {
   color: var(--alert);
   font-size: 0.875rem;
 }
 
 @media screen and (max-width: 1600px) {
-  .form__field-container {
+  .recruitment-form__field-container {
     grid-column: span 2;
   }
 }
 
 @media screen and (max-width: 650px) {
-  .form__field-container {
+  .recruitment-form__field-container {
     padding: 0 1rem 2vh;
   }
 
-.form__field-label {
+.recruitment-form__field-label {
   font-size: 1rem;
 }
 
-  .form__field-input {
+  .recruitment-form__field-input {
     font-size: 0.875rem;
     max-height: 2rem;
   }
 
-  .form__field-select {
+  .recruitment-form__field-select {
     font-size: 0.875rem;
     max-height: 2rem;
     padding: 0 0.5rem;
   }
 
-  .form__field-select--arrow {
+  .recruitment-form__field-select--arrow {
     background-position:
     calc(100% - 20px) calc(0.75rem + 2px),
     calc(100% - 15px) calc(0.75rem + 2px),
     100% 0;
   }
 
-.form__field-select--arrow:focus {
+.recruitment-form__field-select--arrow:focus {
   background-position:
     calc(100% - 15px) 0.75rem,
     calc(100% - 20px) 0.75rem,
@@ -160,16 +178,21 @@
 }
 
 
-  .form__botao {
-    padding: 0.75rem 1.75rem;
+  .recruitment-form__botao {
+    height: 3rem;
     margin: 1rem 1rem 0;
+    width: 7rem;
+  }
+
+  .recruitment-form__botao svg {
+    width: 1.25rem;
   }
 }
 
 .dark {
-  .form__field-input, 
-  .form__field-select,
-  .form__field-select option {
+  .recruitment-form__field-input, 
+  .recruitment-form__field-select,
+  .recruitment-form__field-select option {
     background-color: #3f3f46;
     border: none;
     color: white;
@@ -177,15 +200,15 @@
 }
 
 .bear {
-  .form__field-input, 
-  .form__field-select,
-  .form__field-select option {
+  .recruitment-form__field-input, 
+  .recruitment-form__field-select,
+  .recruitment-form__field-select option {
     background-color: #222;
     border: none;
     color: var(--verde-300);
   }
 
-  .form__field-input:focus {
+  .recruitment-form__field-input:focus {
     outline-color: var(--verde-300);
   }
 }
