--- a/src/Pages/Carreiras/styles.css
+++ b/src/Pages/Carreiras/styles.css
@@ -1,49 +1,51 @@
-.under-construction-container {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  min-height: 100vh;
+.form-and-clients-container {
+  display: grid;
+  grid-template-columns: 1fr 40%;
 }
 
-.under-construction-title {
-  font-size: 8rem;
-  font-weight: 800;
-  padding: 4rem;
-}
-
-.under-construction-subtitle {
-  font-size: 2rem;
+.form__title {
+  font-size: 1.75rem;
   font-weight: 600;
+  letter-spacing: -1px;
+  margin: 0 auto 5vh;
+  max-width: 30rem;
+  text-align: center;
+  -webkit-text-stroke: .5px;
 }
 
-@media screen and (max-width: 1200px) {
+.form {
+  padding: 5rem;
+}
 
-  .under-construction-title {
-    font-size: 5rem;
-    padding: 2rem;
+.clients {
+  background-image: url(../../assets/images/bg-08.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.2;
+}
+
+@media screen and (max-width: 1600px) {
+  .form-and-clients-container {
+    display: grid;
+    grid-template-columns: 1fr;
   }
 
-  .under-construction-subtitle {
-    font-size: 1.75rem;
+  .clients {
+    display: none;
   }
 }
 
-@media screen and (max-width: 768px) {
-
-  .under-construction-title {
-    font-size: 2rem;
-    padding: 1rem;
+@media screen and (max-width: 650px) {
+  .form {
+    padding: 1rem 0.5rem;
   }
-
-  .under-construction-subtitle {
-    font-size: 1rem;
+  .form__title {
+    font-size: 1.25rem;
   }
 }
 
-@media screen and (max-width: 375px) {
-  .under-construction-title {
-    font-size: 1.5rem;
-    padding: 0.5rem;
+.bear {
+  .clients {
+    opacity: 0.04;
   }
 }
