--- a/src/Pages/Carreiras/styles.css
+++ b/src/Pages/Carreiras/styles.css
@@ -1,23 +1,24 @@
-.form-and-clients-container {
+.recruitment-form-and-clients-container {
   display: grid;
   grid-template-columns: 1fr 40%;
 }
 
-.form__title {
+.recruitment-form__title {
   font-size: 1.75rem;
   font-weight: 600;
   letter-spacing: -1px;
-  margin: 0 auto 5vh;
+  margin: 0 auto;
+  padding: 7vh 0 5vh;
   max-width: 30rem;
   text-align: center;
   -webkit-text-stroke: .5px;
 }
 
-.form {
+.recruitment-form {
   padding: 5rem;
 }
 
-.clients {
+.recruitment-clients {
   background-image: url(../../assets/images/bg-08.jpg);
   background-repeat: no-repeat;
   background-size: cover;
@@ -25,27 +26,27 @@
 }
 
 @media screen and (max-width: 1600px) {
-  .form-and-clients-container {
+  .recruitment-form-and-clients-container {
     display: grid;
     grid-template-columns: 1fr;
   }
 
-  .clients {
+  .recruitment-clients {
     display: none;
   }
 }
 
 @media screen and (max-width: 650px) {
-  .form {
+  .recruitment-form {
     padding: 1rem 0.5rem;
   }
-  .form__title {
+  .recruitment-form__title {
     font-size: 1.25rem;
   }
 }
 
 .bear {
-  .clients {
+  .recruitment-clients {
     opacity: 0.04;
   }
 }
