--- a/src/Pages/Carreiras/components/Form/styles.css
+++ b/src/Pages/Carreiras/components/Form/styles.css
@@ -108,7 +108,7 @@
   margin: 2rem 1rem 0;
   position: relative;
   text-transform: uppercase;
-  transition: all 0.3s ease-in-out;
+  /* transition: all 0.3s ease-in-out; */
   width: 10rem;
 }
 
@@ -118,6 +118,10 @@
 
 .spinner-container {
   animation: spin 1s linear infinite;
+}
+
+.recruitment-form__botao:focus {
+  outline: none;
 }
 
 .recruitment-form__botao svg {
