--- a/src/Pages/Carreiras/components/Button/styles.css
+++ b/src/Pages/Carreiras/components/Button/styles.css
@@ -8,7 +8,7 @@
   min-width: 25rem;
   outline: none;
   overflow: hidden;
-  padding: 1.5rem 1.6rem;
+  padding: 1.5rem;
   position: relative;
   text-align: center;
   text-transform: uppercase;
@@ -44,4 +44,26 @@
   width: 28px;
   height: 50px;
   transform: rotate(45deg);
+}
+
+@media screen and (max-width: 1000px) {
+  .careers-button {
+    margin: 3rem auto 0;
+    padding: 1rem;
+    min-width: 15rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .careers-button {
+    margin: 1.5rem auto 0;
+    min-width: 12.5rem;
+  }
+
+  @media screen and (max-width: 650px) {
+    .careers-button {
+      margin: 0 auto;
+      min-width: 10rem;
+    }
+  }
 }
