--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,12 @@ input[type=number] {
   -moz-appearance: none;
 }
 
+*:focus {
+  border: none;
+  border-radius: 4px;
+  outline: 2px solid var(--verde-300); 
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
