--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ html {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+body, h1, h2, h3, h4, h5, h6, p, ol, ul, input, textarea, select {
   font-family: var(--fonte);
   font-weight: normal;
   margin: 0;
