styles: remove some navbar outlines on focus

--- a/src/layout/Header/styles.css
+++ b/src/layout/Header/styles.css
@@ -12,6 +12,12 @@
   z-index: 10;
 }
 
+.header:focus,
+.navlink:focus,
+.logo:focus {
+  outline: none;
+}
+
 .navlink {
   display: flex;
   justify-content: center;
